# sdl3_template

./: CMakeLists.txt  README.md
assets/Adventure Inside 1.1/: ADVENTURE BEGINS - License.txt
assets/Adventure_Begins_OverworldTilesetPack1.0/: ADVENTURE BEGINS - License.txt
assets/Adventurers & Adversaries 1.2/: ADVENTURE BEGINS - Log.txt
include/: Animation.hpp  Animations.hpp  AppState.h  AppState.hpp  AssetLoader.hpp  Matrix3.hpp  Player.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp
src/: animation.cpp  animations.cpp  appState.cpp  helloworld.cpp  player.cpp  transform.cpp  utils.cpp  vector2.cpp
src/maths/: matrix3.cpp  transform.cpp  vector2.cpp  vector3.cpp
